--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,8 @@
 <body>
     <p>Today is Valentine day!</p>
     <h1>Today is Valentine day!</h1>
+    <h2>Today is Valentine day!</h2>
+    <h3>Today is Valentine day!</h3>
 
 </body>
 </html>
